# MedallionNYC

./: .dockerignore  .gitignore  Dockerfile.airflow  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: dashboard.py
dags/: aggregate_dag.py  ingest_dag.py  transform_dag.py
src/medallion_nyc/: __init__.py  config.py  spark_session.py
src/medallion_nyc/bronze/: __init__.py  ingest.py
src/medallion_nyc/gold/: __init__.py  aggregate.py
src/medallion_nyc/silver/: __init__.py  clean.py
tests/: conftest.py  test_bronze_ingest.py  test_gold_aggregate.py  test_silver_clean.py
