[project]
name = "medallion-nyc"
version = "0.1.0"
description = "Medallion-architecture lakehouse analyzing NYC taxi demand shifts before/after congestion pricing"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "pyspark>=3.5,<3.6",
    "delta-spark>=3.2,<3.3",
    "pyarrow>=17.0",
    "pandas>=2.2",
    "requests>=2.32",
    "streamlit>=1.39",
    "duckdb>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
    "responses>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/medallion_nyc"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
